# PythonTesting

./: LICENSE  LICENSE.webloc  PythonTesting.py  README.md  Testing.py  collect1.py  setup1.py
PythonTesting/: pyproject.toml  python_testing.py
PythonTesting/PythonTesting/: pyproject.toml
PythonTesting/mypackage/: README.md  setup.py
mypackage/: __init__.py  addgroup1.py  base.py  collect1.py  setup.py  setup1.py  setup11.py  src.py
verysimplemodule/: __init__.py  addgroup1.py  collect1.py
