[tool.poetry]
name = "mypackage"
version "0.0.1"
description = " a unified collection of code to monitor client private information and indicators eg phone,id,hash "
authors = ["quanche < minhquanpaul@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PaulQuanChe/PythonTesting.git"
respiratory = "https://github.com/PaulQuanChe/PythonTesting.git"
keywords = ["python-testing, "mypackage", "id", "hash", "phone"]

classifiers = [

    	"License :: OSI Approved :: MIT License", 
    	"Programming Language :: Python :: 3",
    	"Programming Language :: Python :: 3.6",
    	"Programking Language :: Python :: 3.7",
    	"Programming Language :: Python :: 3.8",
    	"Programming Language :: Python :: 3.9",
    	"Operating System :: OS Independent",
	]

[tool.poetry.depedencies]
python = "^3.10.6"

[tool.poetry.dev dependencies]
pytest = "^2.7"

[build- system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.mansory.api"